# floci-studio

./: .dockerignore  .env.example  .gitignore  .npmrc  AGENTS.md  API_PAYLOAD_RETURN_REVIEW.md  Dockerfile  Dockerfile.sidecar  Dockerfile.test  README.md  compose.ci.yaml  compose.yaml  eslint.config.js  index.html  metadata.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  sonar-project.properties  tsconfig.json  vite.config.ts  vitest.config.ts
mcp/: Dockerfile  README.md  floci_mcp.py  pyproject.toml  verify_mcp.py
mcp/floci_backend/: config.py  server.py
mcp/floci_backend/api/: athena_routes.py  auth_routes.py  aws_resource_routes.py  cognito_routes.py  diagnostics_routes.py  eks_routes.py  extensibility_routes.py  hybrid_routes.py  iac_routes.py  lambda_routes.py  marketplace_routes.py  mcp_extensions_routes.py  observability_routes.py  pipeline_routes.py  s3_routes.py  studio_routes.py  tags_routes.py  ws_routes.py
mcp/floci_backend/application/: athena_service.py  aws_resource_catalog.py  aws_resource_service.py  cognito_service.py  compatibility_service.py  data_seeder.py  diagnostics_service.py  dlq_service.py  drift_service.py  eks_service.py  flight_recorder.py  hybrid_service.py  iac_generator.py  lambda_service.py  lifecycle_hub.py  plugin_registry.py  (+6 more)
mcp/tools/: _client.py  athena.py  devtools.py  dynamodb.py  eventbridge.py  extensibility.py  hybrid.py  iac.py  kms.py  lambda_.py  marketplace.py  meta.py  observability.py  pipeline.py  s3.py  secrets.py  ses.py  sns.py  sqs.py  stepfunctions.py  tags.py
(+304 files in other folders)
