[project]
name = "floci-mcp"
version = "0.1.0"
description = "Servidor MCP de Floci para integracion de IA con AWS Local y Marketplace"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "pydantic>=2.13.4",
    "docker>=7.1.0",
    "boto3>=1.43.14",
    "aiofiles>=25.1.0",
    "asyncpg>=0.31.0",
    "faker>=40.19.1",
]
